deployment+backup of nodebb

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -17,7 +17,7 @@ http {
   include /etc/nginx/mime.types;
   default_type application/octet-stream;
   types {
-   text/cache-manifest appcache;
+    text/cache-manifest appcache;
   }
 
 #  access_log /var/log/nginx/access.log;
@@ -28,7 +28,11 @@ http {
   server { 
     server_name ~.*;
     location / {
-      proxy_pass http://tinkuy-nodebb:4567/;
+      proxy_pass http://tinkuy-nodebb:4567;
     }
+    location /socket.io { 
+      proxy_pass http://tinkuy-nodebb:4567;
+      access_log off;
+    } 
   }
 }
