--- a/nodebb/Dockerfile
+++ b/nodebb/Dockerfile
@@ -2,10 +2,11 @@ FROM node:0.12
 
 #RUN git clone -b v1.x.x https://github.com/NodeBB/NodeBB /nodebb
 RUN git clone https://github.com/NodeBB/NodeBB /nodebb
-RUN cd /nodebb; npm install
 
-VOLUME /nodebb
 WORKDIR /nodebb
+
+RUN npm install
+RUN npm install nodebb-plugin-emailer-mailgun
 
 EXPOSE 4567
 EXPOSE 443
