--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,27 @@
 version: '2'
 services:
   tinkuy-nodebb:
+    restart: always
     build: ./nodebb
     links:
       - tinkuy-redis
     ports:
       - "4567:4567"
-    volumes: 
-      - tinkuy-nodebb:/nodebb
+    volumes:
+      - ./config/nodebb.config.json:/nodebb/config.json:ro
+      - tinkuy-nodebb:/nodebb/public/uploads
 
   tinkuy-redis:
+    restart: always
     image: redis:3
     volumes: 
       - tinkuy-redis:/data
 
   nginx:
+    restart: always
     image: nginx
     volumes:
-      - /solsort/gh/whale/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./config/nginx.conf:/etc/nginx/nginx.conf:ro
     links:
       - tinkuy-nodebb
     ports:
