--- a/config/Caddyfile
+++ b/config/Caddyfile
@@ -1,4 +1,4 @@
-tinkuy-forum.solsort.com, forum.tinkuy.dk {
+http://tinkuy-forum.localhost, tinkuy-forum.solsort.com, forum.tinkuy.dk {
   proxy / http://tinkuy-nodebb:4567 {
     websocket
   }
