--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - rasmuserik-mysql:/var/lib/mysql
   rasmuserik:
     restart: always
-    image: wordpress:fpm
+    image: wordpress
     links:
       - rasmuserik-mysql
     environment:
@@ -50,7 +50,6 @@ services:
     volumes: 
       - ./Caddyfile:/caddy/Caddyfile:ro
       - caddy:/root/.caddy
-      - rasmuserik-wordpress:/rasmuserik
     ports:
       - "0.0.0.0:80:80"
       - "0.0.0.0:443:443"
