--- a/Caddyfile
+++ b/Caddyfile
@@ -1,6 +1,9 @@
 http://rasmuserik.localhost, http://localhost, rasmuserik.solsort.com {
-  root /rasmuserik/
-  fastcgi / rasmuserik:9000
+  proxy / http://rasmuserik {
+    proxy_header Host {host}
+    proxy_header X-Real-IP {remote}
+    proxy_header X-Forwarded-Proto {scheme}
+  }
   cors
 }
 http://mysql.localhost, mysql.solsort.com {
