--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,7 @@ services:
     volumes: 
       - ./Caddyfile:/caddy/Caddyfile:ro
       - caddy:/root/.caddy
+      - ../apps:/apps
     ports:
       - "0.0.0.0:80:80"
       - "0.0.0.0:443:443"
