--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,6 +98,7 @@ services:
       - couchdb
       - rasmuserik
       - annevoel 
+      - alive
       - mysql-admin
       - piwik
     volumes: 
