caddy add git support

--- a/caddy/Dockerfile
+++ b/caddy/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /caddy
 
 RUN mkdir /caddy; \
     cd /caddy; \
-    curl 'https://caddyserver.com/download/build?os=linux&arch=amd64&features=cors' | tar xvz
+    curl 'https://caddyserver.com/download/build?os=linux&arch=amd64&features=cors,git' | tar xvz
 
 EXPOSE 443
 EXPOSE 80
