--- a/Caddyfile
+++ b/Caddyfile
@@ -55,184 +55,191 @@ http://tinkuy-forum.localhost, tinkuy-forum.solsort.com, forum.tinkuy.dk {
   }
 }
 fmtools.solsort.com {
-  git github.com/solsort/fmtools fmtools {
+  git github.com/solsort/fmtools /fmtools {
     hook /git-update
   }
-  root fmtools
+  root /fmtools/fmtools
   cors
 }
 mobibl.solsort.com {
-  git github.com/solsort/mobibl mobibl {
+  git github.com/solsort/mobibl /mobibl {
     hook /git-update
   }
-  root mobibl
+  root /mobibl/mobibl
+  cors
+}
+apps.solsort.com {
+  git github.com/rasmuserik/apps /apps {
+    hook /git-update
+  }
+  root /apps/apps
   cors
 }
 mubackend.solsort.com {
-  git github.com/rasmuserik/mubackend mubackend {
+  git github.com/rasmuserik/mubackend /mubackend {
     hook /git-update
   }
-  root mubackend
+  root /mubackend/mubackend
   cors
 }
 html5book.solsort.com {
-  git github.com/rasmuserik/html5book html5book {
+  git github.com/rasmuserik/html5book /html5book {
     hook /git-update
   }
-  root html5book
+  root /html5book/html5book
   cors
 }
 app-list.solsort.com {
-  git github.com/rasmuserik/app-list app-list {
+  git github.com/rasmuserik/app-list /app-list {
     hook /git-update
   }
-  root app-list
+  root /app-list/app-list
   cors
 }
 bibapp.solsort.com {
-  git github.com/rasmuserik/bibapp bibapp {
+  git github.com/rasmuserik/bibapp /bibapp {
     hook /git-update
   }
-  root bibapp
+  root /bibapp/bibapp
   cors
 }
 lemon.solsort.com {
-  git github.com/NewCircleMovement/lemon lemon {
+  git github.com/NewCircleMovement/lemon /lemon {
     hook /git-update
   }
-  root lemon
+  root /lemon/lemon
   cors
 }
 visualisering-af-relationer.solsort.com {
-  git github.com/solsort/visualisering-af-relationer visualisering-af-relationer {
+  git github.com/solsort/visualisering-af-relationer /visualisering-af-relationer {
     hook /git-update
   }
-  root visualisering-af-relationer
+  root /visualisering-af-relationer/visualisering-af-relationer
   cors
 }
 sketch-note-draw.solsort.com {
-  git github.com/rasmuserik/sketch-note-draw sketch-note-draw {
+  git github.com/rasmuserik/sketch-note-draw /sketch-note-draw {
     hook /git-update
   }
-  root sketch-note-draw
+  root /sketch-note-draw/sketch-note-draw
   cors
 }
 frie-sange.solsort.com {
-  git github.com/rasmuserik/frie-sange frie-sange {
+  git github.com/rasmuserik/frie-sange /frie-sange {
     hook /git-update
   }
-  root frie-sange
+  root /frie-sange/frie-sange
   cors
 }
 morse-code.solsort.com {
-  git github.com/rasmuserik/morse-code morse-code {
+  git github.com/rasmuserik/morse-code /morse-code {
     hook /git-update
   }
-  root morse-code
+  root /morse-code/morse-code
   cors
 }
 single-touch-snake.solsort.com {
-  git github.com/rasmuserik/single-touch-snake single-touch-snake {
+  git github.com/rasmuserik/single-touch-snake /single-touch-snake {
     hook /git-update
   }
-  root single-touch-snake
+  root /single-touch-snake/single-touch-snake
   cors
 }
 kbh-parking.solsort.com {
-  git github.com/rasmuserik/kbh-parking kbh-parking {
+  git github.com/rasmuserik/kbh-parking /kbh-parking {
     hook /git-update
   }
-  root kbh-parking
+  root /kbh-parking/kbh-parking
   cors
 }
 360-viewer.solsort.com {
-  git github.com/OneTwo360/360-viewer 360-viewer {
+  git github.com/OneTwo360/360-viewer /360-viewer {
     hook /git-update
   }
-  root 360-viewer
+  root /360-viewer/360-viewer
   cors
 }
 art-quiz.solsort.com {
-  git github.com/rasmuserik/art-quiz art-quiz {
+  git github.com/rasmuserik/art-quiz /art-quiz {
     hook /git-update
   }
-  root art-quiz
+  root /art-quiz/art-quiz
   cors
 }
 app-tsartnoc.solsort.com {
-  git github.com/rasmuserik/app-tsartnoc app-tsartnoc {
+  git github.com/rasmuserik/app-tsartnoc /app-tsartnoc {
     hook /git-update
   }
-  root app-tsartnoc
+  root /app-tsartnoc/app-tsartnoc
   cors
 }
 blobshot.solsort.com {
-  git github.com/rasmuserik/blobshot blobshot {
+  git github.com/rasmuserik/blobshot /blobshot {
     hook /git-update
   }
-  root blobshot
+  root /blobshot/blobshot
   cors
 }
 dkcities.solsort.com {
-  git github.com/rasmuserik/dkcities dkcities {
+  git github.com/rasmuserik/dkcities /dkcities {
     hook /git-update
   }
-  root dkcities
+  root /dkcities/dkcities
   cors
 }
 planetcute.solsort.com {
-  git github.com/rasmuserik/planetcute planetcute {
+  git github.com/rasmuserik/planetcute /planetcute {
     hook /git-update
   }
-  root planetcute
+  root /planetcute/planetcute
   cors
 }
 timelog.solsort.com {
-  git github.com/rasmuserik/timelog timelog {
+  git github.com/rasmuserik/timelog /timelog {
     hook /git-update
   }
-  root timelog
+  root /timelog/timelog
   cors
 }
 notescore.solsort.com {
-  git github.com/rasmuserik/notescore notescore {
+  git github.com/rasmuserik/notescore /notescore {
     hook /git-update
   }
-  root notescore
+  root /notescore/notescore
   cors
 }
 combigame.solsort.com {
-  git github.com/rasmuserik/combigame combigame {
+  git github.com/rasmuserik/combigame /combigame {
     hook /git-update
   }
-  root combigame
+  root /combigame/combigame
   cors
 }
 julia4d.solsort.com {
-  git github.com/rasmuserik/julia4d julia4d {
+  git github.com/rasmuserik/julia4d /julia4d {
     hook /git-update
   }
-  root julia4d
+  root /julia4d/julia4d
   cors
 }
 js1k-brownian.solsort.com {
-  git github.com/rasmuserik/js1k-brownian js1k-brownian {
+  git github.com/rasmuserik/js1k-brownian /js1k-brownian {
     hook /git-update
   }
-  root js1k-brownian
+  root /js1k-brownian/js1k-brownian
   cors
 }
 js1k-rain.solsort.com {
-  git github.com/rasmuserik/js1k-rain js1k-rain {
+  git github.com/rasmuserik/js1k-rain /js1k-rain {
     hook /git-update
   }
-  root js1k-rain
+  root /js1k-rain/js1k-rain
   cors
 }
 js1k-sierpinsky.solsort.com {
-  git github.com/rasmuserik/js1k-sierpinsky js1k-sierpinsky {
+  git github.com/rasmuserik/js1k-sierpinsky /js1k-sierpinsky {
     hook /git-update
   }
-  root js1k-sierpinsky
+  root /js1k-sierpinsky/js1k-sierpinsky
   cors
 }
