--- a/Caddyfile
+++ b/Caddyfile
@@ -55,191 +55,191 @@ http://tinkuy-forum.localhost, tinkuy-forum.solsort.com, forum.tinkuy.dk {
   }
 }
 fmtools.solsort.com {
-  git github.com/solsort/fmtools /fmtools {
+  git github.com/solsort/fmtools {
     hook /git-update
   }
-  root /fmtools/fmtools
+  root /apps/fmtools
   cors
 }
 mobibl.solsort.com {
-  git github.com/solsort/mobibl /mobibl {
+  git github.com/solsort/mobibl {
     hook /git-update
   }
-  root /mobibl/mobibl
+  root /apps/mobibl
   cors
 }
 apps.solsort.com {
-  git github.com/rasmuserik/apps /apps {
+  git github.com/rasmuserik/apps {
     hook /git-update
   }
   root /apps/apps
   cors
 }
 mubackend.solsort.com {
-  git github.com/rasmuserik/mubackend /mubackend {
+  git github.com/rasmuserik/mubackend {
     hook /git-update
   }
-  root /mubackend/mubackend
+  root /apps/mubackend
   cors
 }
 html5book.solsort.com {
-  git github.com/rasmuserik/html5book /html5book {
+  git github.com/rasmuserik/html5book {
     hook /git-update
   }
-  root /html5book/html5book
+  root /apps/html5book
   cors
 }
 app-list.solsort.com {
-  git github.com/rasmuserik/app-list /app-list {
+  git github.com/rasmuserik/app-list {
     hook /git-update
   }
-  root /app-list/app-list
+  root /apps/app-list
   cors
 }
 bibapp.solsort.com {
-  git github.com/rasmuserik/bibapp /bibapp {
+  git github.com/rasmuserik/bibapp {
     hook /git-update
   }
-  root /bibapp/bibapp
+  root /apps/bibapp
   cors
 }
 lemon.solsort.com {
-  git github.com/NewCircleMovement/lemon /lemon {
+  git github.com/NewCircleMovement/lemon {
     hook /git-update
   }
-  root /lemon/lemon
+  root /apps/lemon
   cors
 }
 visualisering-af-relationer.solsort.com {
-  git github.com/solsort/visualisering-af-relationer /visualisering-af-relationer {
+  git github.com/solsort/visualisering-af-relationer {
     hook /git-update
   }
-  root /visualisering-af-relationer/visualisering-af-relationer
+  root /apps/visualisering-af-relationer
   cors
 }
 sketch-note-draw.solsort.com {
-  git github.com/rasmuserik/sketch-note-draw /sketch-note-draw {
+  git github.com/rasmuserik/sketch-note-draw {
     hook /git-update
   }
-  root /sketch-note-draw/sketch-note-draw
+  root /apps/sketch-note-draw
   cors
 }
 frie-sange.solsort.com {
-  git github.com/rasmuserik/frie-sange /frie-sange {
+  git github.com/rasmuserik/frie-sange {
     hook /git-update
   }
-  root /frie-sange/frie-sange
+  root /apps/frie-sange
   cors
 }
 morse-code.solsort.com {
-  git github.com/rasmuserik/morse-code /morse-code {
+  git github.com/rasmuserik/morse-code {
     hook /git-update
   }
-  root /morse-code/morse-code
+  root /apps/morse-code
   cors
 }
 single-touch-snake.solsort.com {
-  git github.com/rasmuserik/single-touch-snake /single-touch-snake {
+  git github.com/rasmuserik/single-touch-snake {
     hook /git-update
   }
-  root /single-touch-snake/single-touch-snake
+  root /apps/single-touch-snake
   cors
 }
 kbh-parking.solsort.com {
-  git github.com/rasmuserik/kbh-parking /kbh-parking {
+  git github.com/rasmuserik/kbh-parking {
     hook /git-update
   }
-  root /kbh-parking/kbh-parking
+  root /apps/kbh-parking
   cors
 }
 360-viewer.solsort.com {
-  git github.com/OneTwo360/360-viewer /360-viewer {
+  git github.com/OneTwo360/360-viewer {
     hook /git-update
   }
-  root /360-viewer/360-viewer
+  root /apps/360-viewer
   cors
 }
 art-quiz.solsort.com {
-  git github.com/rasmuserik/art-quiz /art-quiz {
+  git github.com/rasmuserik/art-quiz {
     hook /git-update
   }
-  root /art-quiz/art-quiz
+  root /apps/art-quiz
   cors
 }
 app-tsartnoc.solsort.com {
-  git github.com/rasmuserik/app-tsartnoc /app-tsartnoc {
+  git github.com/rasmuserik/app-tsartnoc {
     hook /git-update
   }
-  root /app-tsartnoc/app-tsartnoc
+  root /apps/app-tsartnoc
   cors
 }
 blobshot.solsort.com {
-  git github.com/rasmuserik/blobshot /blobshot {
+  git github.com/rasmuserik/blobshot {
     hook /git-update
   }
-  root /blobshot/blobshot
+  root /apps/blobshot
   cors
 }
 dkcities.solsort.com {
-  git github.com/rasmuserik/dkcities /dkcities {
+  git github.com/rasmuserik/dkcities {
     hook /git-update
   }
-  root /dkcities/dkcities
+  root /apps/dkcities
   cors
 }
 planetcute.solsort.com {
-  git github.com/rasmuserik/planetcute /planetcute {
+  git github.com/rasmuserik/planetcute {
     hook /git-update
   }
-  root /planetcute/planetcute
+  root /apps/planetcute
   cors
 }
 timelog.solsort.com {
-  git github.com/rasmuserik/timelog /timelog {
+  git github.com/rasmuserik/timelog {
     hook /git-update
   }
-  root /timelog/timelog
+  root /apps/timelog
   cors
 }
 notescore.solsort.com {
-  git github.com/rasmuserik/notescore /notescore {
+  git github.com/rasmuserik/notescore {
     hook /git-update
   }
-  root /notescore/notescore
+  root /apps/notescore
   cors
 }
 combigame.solsort.com {
-  git github.com/rasmuserik/combigame /combigame {
+  git github.com/rasmuserik/combigame {
     hook /git-update
   }
-  root /combigame/combigame
+  root /apps/combigame
   cors
 }
 julia4d.solsort.com {
-  git github.com/rasmuserik/julia4d /julia4d {
+  git github.com/rasmuserik/julia4d {
     hook /git-update
   }
-  root /julia4d/julia4d
+  root /apps/julia4d
   cors
 }
 js1k-brownian.solsort.com {
-  git github.com/rasmuserik/js1k-brownian /js1k-brownian {
+  git github.com/rasmuserik/js1k-brownian {
     hook /git-update
   }
-  root /js1k-brownian/js1k-brownian
+  root /apps/js1k-brownian
   cors
 }
 js1k-rain.solsort.com {
-  git github.com/rasmuserik/js1k-rain /js1k-rain {
+  git github.com/rasmuserik/js1k-rain {
     hook /git-update
   }
-  root /js1k-rain/js1k-rain
+  root /apps/js1k-rain
   cors
 }
 js1k-sierpinsky.solsort.com {
-  git github.com/rasmuserik/js1k-sierpinsky /js1k-sierpinsky {
+  git github.com/rasmuserik/js1k-sierpinsky {
     hook /git-update
   }
-  root /js1k-sierpinsky/js1k-sierpinsky
+  root /apps/js1k-sierpinsky
   cors
 }
