http-methods for owncloud webdav

--- a/Caddyfile
+++ b/Caddyfile
@@ -26,7 +26,9 @@ http://owncloud.localhost, owncloud.solsort.com {
   }
   header / Access-Control-Allow-Headers Content-Type
   header / Access-Control-Allow-Credentials true
-  cors
+  cors {
+    methods POST,GET,OPTIONS,PUT,DELETE,PROPFIND,PROPPATCH,MKCOL,COPY,MOVE,LOCK,UNLOCK
+  }
 }
 http://rasmuserik.localhost, rasmuserik.solsort.com, blog.rasmuserik.com, blog.solsort.com, rasmuserik.com, www.rasmuserik.com {
   proxy / http://rasmuserik {
