--- a/Caddyfile
+++ b/Caddyfile
@@ -89,6 +89,13 @@ fmtools.solsort.com {
   header / Access-Control-Allow-Credentials true
   cors
 }
+whale.solsort.com {
+  git github.com/rasmuserik/whale {
+    hook /git-update
+  }
+  root /apps/whale
+  cors
+}
 tinkuy-member-check.solsort.com {
   git github.com/NewCircleMovement/tinkuy-member-check {
     hook /git-update
